// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ContributorRow Row should be clickable when showContributorAssignment set to true 1`] = `
<Fragment>
  <Memo(ConfirmationBox)
    confirmationBoxId="test-list-row-0-delete"
    isOpen={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onClose={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "makeStyles-listItem-2",
      }
    }
    divider={true}
    id="test-list-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <PersonOutlinedIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "contributorLinked": "makeStyles-contributorLinked-11",
          "disabledListItem": "makeStyles-disabledListItem-3",
          "hideIcon": "makeStyles-hideIcon-7",
          "highlighted": "makeStyles-highlighted-4",
          "identifierName": "makeStyles-identifierName-9",
          "identifierSubtitle": "makeStyles-identifierSubtitle-10",
          "listContainer": "makeStyles-listContainer-1",
          "listItem": "makeStyles-listItem-2",
          "primary": "makeStyles-primary-8",
          "rowSelected": "makeStyles-rowSelected-5",
          "selected": "makeStyles-selected-6",
        }
      }
      contributor={
        Object {
          "aut_created_date": "2007-08-09",
          "aut_description": null,
          "aut_display_name": "J Researcher",
          "aut_email": null,
          "aut_external_id": "0001098586",
          "aut_fname": "J",
          "aut_google_scholar_id": "kUemDfMAAAAJ",
          "aut_homepage_link": null,
          "aut_id": 410,
          "aut_lname": "Researcher",
          "aut_mname": null,
          "aut_mypub_url": null,
          "aut_orcid_id": "0000-0001-1111-1111",
          "aut_org_staff_id": "0000111",
          "aut_org_student_id": null,
          "aut_org_username": "uqresearcher",
          "aut_people_australia_id": null,
          "aut_position": null,
          "aut_publons_id": null,
          "aut_ref_num": null,
          "aut_researcher_id": null,
          "aut_rid_last_updated": null,
          "aut_rid_password": null,
          "aut_scopus_id": null,
          "aut_student_username": null,
          "aut_title": "Professor",
          "aut_update_date": null,
          "is_administrator": 0,
          "is_super_administrator": 0,
          "nameAsPublished": "J. Smith",
        }
      }
      contributorRowId="test-list-row-0"
      index={0}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            data-testid="test-list-row-0-delete"
            disabled={false}
            id="test-list-row-delete-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow Row should not be clickable when showContributorAssignment set to false 1`] = `
<Fragment>
  <Memo(ConfirmationBox)
    confirmationBoxId="test-list-row-0-delete"
    isOpen={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onClose={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "makeStyles-listItem-2",
      }
    }
    divider={true}
    id="test-list-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <PersonOutlinedIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "contributorLinked": "makeStyles-contributorLinked-11",
          "disabledListItem": "makeStyles-disabledListItem-3",
          "hideIcon": "makeStyles-hideIcon-7",
          "highlighted": "makeStyles-highlighted-4",
          "identifierName": "makeStyles-identifierName-9",
          "identifierSubtitle": "makeStyles-identifierSubtitle-10",
          "listContainer": "makeStyles-listContainer-1",
          "listItem": "makeStyles-listItem-2",
          "primary": "makeStyles-primary-8",
          "rowSelected": "makeStyles-rowSelected-5",
          "selected": "makeStyles-selected-6",
        }
      }
      contributor={
        Object {
          "aut_created_date": "2007-08-09",
          "aut_description": null,
          "aut_display_name": "J Researcher",
          "aut_email": null,
          "aut_external_id": "0001098586",
          "aut_fname": "J",
          "aut_google_scholar_id": "kUemDfMAAAAJ",
          "aut_homepage_link": null,
          "aut_id": 410,
          "aut_lname": "Researcher",
          "aut_mname": null,
          "aut_mypub_url": null,
          "aut_orcid_id": "0000-0001-1111-1111",
          "aut_org_staff_id": "0000111",
          "aut_org_student_id": null,
          "aut_org_username": "uqresearcher",
          "aut_people_australia_id": null,
          "aut_position": null,
          "aut_publons_id": null,
          "aut_ref_num": null,
          "aut_researcher_id": null,
          "aut_rid_last_updated": null,
          "aut_rid_password": null,
          "aut_scopus_id": null,
          "aut_student_username": null,
          "aut_title": "Professor",
          "aut_update_date": null,
          "is_administrator": 0,
          "is_super_administrator": 0,
          "nameAsPublished": "J. Smith",
        }
      }
      contributorRowId="test-list-row-0"
      index={0}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            data-testid="test-list-row-0-delete"
            disabled={false}
            id="test-list-row-delete-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor set, renders only name and delete button 1`] = `
<Fragment>
  <Memo(ConfirmationBox)
    confirmationBoxId="test-list-row-0-delete"
    isOpen={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onClose={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (A. Smith) to assign it to you"
    classes={
      Object {
        "root": "makeStyles-listItem-2",
      }
    }
    divider={true}
    id="test-list-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <PersonOutlinedIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "contributorLinked": "makeStyles-contributorLinked-11",
          "disabledListItem": "makeStyles-disabledListItem-3",
          "hideIcon": "makeStyles-hideIcon-7",
          "highlighted": "makeStyles-highlighted-4",
          "identifierName": "makeStyles-identifierName-9",
          "identifierSubtitle": "makeStyles-identifierSubtitle-10",
          "listContainer": "makeStyles-listContainer-1",
          "listItem": "makeStyles-listItem-2",
          "primary": "makeStyles-primary-8",
          "rowSelected": "makeStyles-rowSelected-5",
          "selected": "makeStyles-selected-6",
        }
      }
      contributor={
        Object {
          "nameAsPublished": "A. Smith",
        }
      }
      contributorRowId="test-list-row-0"
      index={0}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            data-testid="test-list-row-0-delete"
            disabled={false}
            id="test-list-row-delete-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor set, renders only name and delete button for mobile view 1`] = `
<Fragment>
  <Memo(ConfirmationBox)
    confirmationBoxId="test-list-row-0-delete"
    isOpen={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onClose={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (A. Smith) to assign it to you"
    classes={
      Object {
        "root": "makeStyles-listItem-2",
      }
    }
    divider={true}
    id="test-list-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <PersonOutlinedIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "contributorLinked": "makeStyles-contributorLinked-11",
          "disabledListItem": "makeStyles-disabledListItem-3",
          "hideIcon": "makeStyles-hideIcon-7",
          "highlighted": "makeStyles-highlighted-4",
          "identifierName": "makeStyles-identifierName-9",
          "identifierSubtitle": "makeStyles-identifierSubtitle-10",
          "listContainer": "makeStyles-listContainer-1",
          "listItem": "makeStyles-listItem-2",
          "primary": "makeStyles-primary-8",
          "rowSelected": "makeStyles-rowSelected-5",
          "selected": "makeStyles-selected-6",
        }
      }
      contributor={
        Object {
          "nameAsPublished": "A. Smith",
        }
      }
      contributorRowId="test-list-row-0"
      index={0}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            data-testid="test-list-row-0-delete"
            disabled={false}
            id="test-list-row-delete-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor set, renders reorder buttons, contributor assignment & delete button 1`] = `
<Fragment>
  <Memo(ConfirmationBox)
    confirmationBoxId="test-list-row-0-delete"
    isOpen={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onClose={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "makeStyles-listItem-2",
      }
    }
    divider={true}
    id="test-list-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <PersonOutlinedIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "contributorLinked": "makeStyles-contributorLinked-11",
          "disabledListItem": "makeStyles-disabledListItem-3",
          "hideIcon": "makeStyles-hideIcon-7",
          "highlighted": "makeStyles-highlighted-4",
          "identifierName": "makeStyles-identifierName-9",
          "identifierSubtitle": "makeStyles-identifierSubtitle-10",
          "listContainer": "makeStyles-listContainer-1",
          "listItem": "makeStyles-listItem-2",
          "primary": "makeStyles-primary-8",
          "rowSelected": "makeStyles-rowSelected-5",
          "selected": "makeStyles-selected-6",
        }
      }
      contributor={
        Object {
          "aut_created_date": "2007-08-09",
          "aut_description": null,
          "aut_display_name": "J Researcher",
          "aut_email": null,
          "aut_external_id": "0001098586",
          "aut_fname": "J",
          "aut_google_scholar_id": "kUemDfMAAAAJ",
          "aut_homepage_link": null,
          "aut_id": 410,
          "aut_lname": "Researcher",
          "aut_mname": null,
          "aut_mypub_url": null,
          "aut_orcid_id": "0000-0001-1111-1111",
          "aut_org_staff_id": "0000111",
          "aut_org_student_id": null,
          "aut_org_username": "uqresearcher",
          "aut_people_australia_id": null,
          "aut_position": null,
          "aut_publons_id": null,
          "aut_ref_num": null,
          "aut_researcher_id": null,
          "aut_rid_last_updated": null,
          "aut_rid_password": null,
          "aut_scopus_id": null,
          "aut_student_username": null,
          "aut_title": "Professor",
          "aut_update_date": null,
          "is_administrator": 0,
          "is_super_administrator": 0,
          "nameAsPublished": "J. Smith",
        }
      }
      contributorRowId="test-list-row-0"
      index={0}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Move record up the order"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Move record up the order"
            data-testid="test-list-row-0-move-up"
            disabled={false}
            id="test-list-row-move-up-0"
            onClick={[Function]}
          >
            <KeyboardArrowUpIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Move record down the order"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Move record down the order"
            data-testid="test-list-row-0-move-down"
            disabled={false}
            id="test-list-row-move-down-0"
            onClick={[Function]}
          >
            <KeyboardArrowDownIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            data-testid="test-list-row-0-delete"
            disabled={false}
            id="test-list-row-delete-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor with author details set and set as selected 1`] = `
<Fragment>
  <Memo(ConfirmationBox)
    confirmationBoxId="test-list-row-0-delete"
    isOpen={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onClose={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "makeStyles-listItem-2 makeStyles-rowSelected-5",
      }
    }
    divider={true}
    id="test-list-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "makeStyles-selected-6",
          }
        }
      >
        <PersonIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "contributorLinked": "makeStyles-contributorLinked-11",
          "disabledListItem": "makeStyles-disabledListItem-3",
          "hideIcon": "makeStyles-hideIcon-7",
          "highlighted": "makeStyles-highlighted-4",
          "identifierName": "makeStyles-identifierName-9",
          "identifierSubtitle": "makeStyles-identifierSubtitle-10",
          "listContainer": "makeStyles-listContainer-1",
          "listItem": "makeStyles-listItem-2",
          "primary": "makeStyles-primary-8",
          "rowSelected": "makeStyles-rowSelected-5",
          "selected": "makeStyles-selected-6",
        }
      }
      contributor={
        Object {
          "nameAsPublished": "J. Smith",
          "selected": true,
        }
      }
      contributorRowId="test-list-row-0"
      index={0}
      selectedClass="makeStyles-selected-6"
      showRoleInput={false}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            data-testid="test-list-row-0-delete"
            disabled={false}
            id="test-list-row-delete-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "makeStyles-selected-6",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor with author details set and set as selected for mobile view 1`] = `
<Fragment>
  <Memo(ConfirmationBox)
    confirmationBoxId="test-list-row-0-delete"
    isOpen={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onClose={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "makeStyles-listItem-2 makeStyles-rowSelected-5",
      }
    }
    divider={true}
    id="test-list-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "makeStyles-selected-6",
          }
        }
      >
        <PersonIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "contributorLinked": "makeStyles-contributorLinked-11",
          "disabledListItem": "makeStyles-disabledListItem-3",
          "hideIcon": "makeStyles-hideIcon-7",
          "highlighted": "makeStyles-highlighted-4",
          "identifierName": "makeStyles-identifierName-9",
          "identifierSubtitle": "makeStyles-identifierSubtitle-10",
          "listContainer": "makeStyles-listContainer-1",
          "listItem": "makeStyles-listItem-2",
          "primary": "makeStyles-primary-8",
          "rowSelected": "makeStyles-rowSelected-5",
          "selected": "makeStyles-selected-6",
        }
      }
      contributor={
        Object {
          "nameAsPublished": "J. Smith",
          "selected": true,
        }
      }
      contributorRowId="test-list-row-0"
      index={0}
      selectedClass="makeStyles-selected-6"
      showRoleInput={false}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            data-testid="test-list-row-0-delete"
            disabled={false}
            id="test-list-row-delete-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "makeStyles-selected-6",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor with author details set, contributor author details & delete button 1`] = `
<Fragment>
  <Memo(ConfirmationBox)
    confirmationBoxId="test-list-row-0-delete"
    isOpen={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onClose={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "makeStyles-listItem-2",
      }
    }
    divider={true}
    id="test-list-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <PersonOutlinedIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "contributorLinked": "makeStyles-contributorLinked-11",
          "disabledListItem": "makeStyles-disabledListItem-3",
          "hideIcon": "makeStyles-hideIcon-7",
          "highlighted": "makeStyles-highlighted-4",
          "identifierName": "makeStyles-identifierName-9",
          "identifierSubtitle": "makeStyles-identifierSubtitle-10",
          "listContainer": "makeStyles-listContainer-1",
          "listItem": "makeStyles-listItem-2",
          "primary": "makeStyles-primary-8",
          "rowSelected": "makeStyles-rowSelected-5",
          "selected": "makeStyles-selected-6",
        }
      }
      contributor={
        Object {
          "aut_created_date": "2007-08-09",
          "aut_description": null,
          "aut_display_name": "J Researcher",
          "aut_email": null,
          "aut_external_id": "0001098586",
          "aut_fname": "J",
          "aut_google_scholar_id": "kUemDfMAAAAJ",
          "aut_homepage_link": null,
          "aut_id": 410,
          "aut_lname": "Researcher",
          "aut_mname": null,
          "aut_mypub_url": null,
          "aut_orcid_id": "0000-0001-1111-1111",
          "aut_org_staff_id": "0000111",
          "aut_org_student_id": null,
          "aut_org_username": "uqresearcher",
          "aut_people_australia_id": null,
          "aut_position": null,
          "aut_publons_id": null,
          "aut_ref_num": null,
          "aut_researcher_id": null,
          "aut_rid_last_updated": null,
          "aut_rid_password": null,
          "aut_scopus_id": null,
          "aut_student_username": null,
          "aut_title": "Professor",
          "aut_update_date": null,
          "is_administrator": 0,
          "is_super_administrator": 0,
          "nameAsPublished": "J. Smith",
        }
      }
      contributorRowId="test-list-row-0"
      index={0}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            data-testid="test-list-row-0-delete"
            disabled={false}
            id="test-list-row-delete-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow a row with index and creator with creator role set and set as selected 1`] = `
<Fragment>
  <Memo(ConfirmationBox)
    confirmationBoxId="test-list-row-0-delete"
    isOpen={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onClose={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "makeStyles-listItem-2 makeStyles-rowSelected-5",
      }
    }
    divider={true}
    id="test-list-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "makeStyles-selected-6",
          }
        }
      >
        <PersonIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "contributorLinked": "makeStyles-contributorLinked-11",
          "disabledListItem": "makeStyles-disabledListItem-3",
          "hideIcon": "makeStyles-hideIcon-7",
          "highlighted": "makeStyles-highlighted-4",
          "identifierName": "makeStyles-identifierName-9",
          "identifierSubtitle": "makeStyles-identifierSubtitle-10",
          "listContainer": "makeStyles-listContainer-1",
          "listItem": "makeStyles-listItem-2",
          "primary": "makeStyles-primary-8",
          "rowSelected": "makeStyles-rowSelected-5",
          "selected": "makeStyles-selected-6",
        }
      }
      contributor={
        Object {
          "creatorRole": "Investigator",
          "nameAsPublished": "J. Smith",
          "selected": true,
        }
      }
      contributorRowId="test-list-row-0"
      index={0}
      selectedClass="makeStyles-selected-6"
      showRoleInput={true}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            data-testid="test-list-row-0-delete"
            disabled={false}
            id="test-list-row-delete-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "makeStyles-selected-6",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow a row with index and creator with creator role set and set as selected for mobile view 1`] = `
<Fragment>
  <Memo(ConfirmationBox)
    confirmationBoxId="test-list-row-0-delete"
    isOpen={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onClose={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "makeStyles-listItem-2 makeStyles-rowSelected-5",
      }
    }
    divider={true}
    id="test-list-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "makeStyles-selected-6",
          }
        }
      >
        <PersonIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "contributorLinked": "makeStyles-contributorLinked-11",
          "disabledListItem": "makeStyles-disabledListItem-3",
          "hideIcon": "makeStyles-hideIcon-7",
          "highlighted": "makeStyles-highlighted-4",
          "identifierName": "makeStyles-identifierName-9",
          "identifierSubtitle": "makeStyles-identifierSubtitle-10",
          "listContainer": "makeStyles-listContainer-1",
          "listItem": "makeStyles-listItem-2",
          "primary": "makeStyles-primary-8",
          "rowSelected": "makeStyles-rowSelected-5",
          "selected": "makeStyles-selected-6",
        }
      }
      contributor={
        Object {
          "creatorRole": "Investigator",
          "nameAsPublished": "J. Smith",
          "selected": true,
        }
      }
      contributorRowId="test-list-row-0"
      index={0}
      selectedClass="makeStyles-selected-6"
      showRoleInput={true}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            data-testid="test-list-row-0-delete"
            disabled={false}
            id="test-list-row-delete-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "makeStyles-selected-6",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow should assign contributor 1`] = `
<Fragment>
  <Memo(ConfirmationBox)
    confirmationBoxId="test-list-row-0-delete"
    isOpen={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onClose={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (test) to assign it to you"
    classes={
      Object {
        "root": "makeStyles-listItem-2 makeStyles-rowSelected-5",
      }
    }
    divider={true}
    id="test-list-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "makeStyles-selected-6",
          }
        }
      >
        <PersonIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "contributorLinked": "makeStyles-contributorLinked-11",
          "disabledListItem": "makeStyles-disabledListItem-3",
          "hideIcon": "makeStyles-hideIcon-7",
          "highlighted": "makeStyles-highlighted-4",
          "identifierName": "makeStyles-identifierName-9",
          "identifierSubtitle": "makeStyles-identifierSubtitle-10",
          "listContainer": "makeStyles-listContainer-1",
          "listItem": "makeStyles-listItem-2",
          "primary": "makeStyles-primary-8",
          "rowSelected": "makeStyles-rowSelected-5",
          "selected": "makeStyles-selected-6",
        }
      }
      contributor={
        Object {
          "affiliation": "NotUQ",
          "nameAsPublished": "test",
          "orgaff": "Somewhere",
          "orgtype": "453983",
          "selected": true,
        }
      }
      contributorRowId="test-list-row-0"
      index={0}
      selectedClass="makeStyles-selected-6"
      showRoleInput={false}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            data-testid="test-list-row-0-delete"
            disabled={false}
            id="test-list-row-delete-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "makeStyles-selected-6",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow should call callback functions on ListItem 1`] = `
<Fragment>
  <Memo(ConfirmationBox)
    confirmationBoxId="test-list-row-0-delete"
    isOpen={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onClose={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (test) to assign it to you"
    classes={
      Object {
        "root": "makeStyles-listItem-2 makeStyles-rowSelected-5",
      }
    }
    divider={true}
    id="test-list-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "makeStyles-selected-6",
          }
        }
      >
        <PersonIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "contributorLinked": "makeStyles-contributorLinked-11",
          "disabledListItem": "makeStyles-disabledListItem-3",
          "hideIcon": "makeStyles-hideIcon-7",
          "highlighted": "makeStyles-highlighted-4",
          "identifierName": "makeStyles-identifierName-9",
          "identifierSubtitle": "makeStyles-identifierSubtitle-10",
          "listContainer": "makeStyles-listContainer-1",
          "listItem": "makeStyles-listItem-2",
          "primary": "makeStyles-primary-8",
          "rowSelected": "makeStyles-rowSelected-5",
          "selected": "makeStyles-selected-6",
        }
      }
      contributor={
        Object {
          "affiliation": "NotUQ",
          "nameAsPublished": "test",
          "orgaff": "Somewhere",
          "orgtype": "453983",
          "selected": true,
        }
      }
      contributorRowId="test-list-row-0"
      index={0}
      selectedClass="makeStyles-selected-6"
      showRoleInput={true}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            data-testid="test-list-row-0-delete"
            disabled={false}
            id="test-list-row-delete-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "makeStyles-selected-6",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow should handle edits 1`] = `
<Fragment>
  <Memo(ConfirmationBox)
    confirmationBoxId="test-list-row-2-delete"
    isOpen={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onClose={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (A. Smith) to assign it to you"
    classes={
      Object {
        "root": "makeStyles-listItem-2",
      }
    }
    divider={true}
    id="test-list-row-2"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <PersonOutlinedIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={true}
      classes={
        Object {
          "contributorLinked": "makeStyles-contributorLinked-11",
          "disabledListItem": "makeStyles-disabledListItem-3",
          "hideIcon": "makeStyles-hideIcon-7",
          "highlighted": "makeStyles-highlighted-4",
          "identifierName": "makeStyles-identifierName-9",
          "identifierSubtitle": "makeStyles-identifierSubtitle-10",
          "listContainer": "makeStyles-listContainer-1",
          "listItem": "makeStyles-listItem-2",
          "primary": "makeStyles-primary-8",
          "rowSelected": "makeStyles-rowSelected-5",
          "selected": "makeStyles-selected-6",
        }
      }
      contributor={
        Object {
          "nameAsPublished": "A. Smith",
        }
      }
      contributorRowId="test-list-row-2"
      index={2}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Edit this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Edit this record"
            data-testid="test-list-row-2-edit"
            disabled={false}
            id="test-list-row-edit-2"
            onClick={[Function]}
          >
            <EditIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            data-testid="test-list-row-2-delete"
            disabled={false}
            id="test-list-row-delete-2"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow should render a row with a disabled contributor 1`] = `
<Fragment>
  <Memo(ConfirmationBox)
    confirmationBoxId="test-list-row-0-delete"
    isOpen={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onClose={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (undefined) to assign it to you"
    classes={
      Object {
        "root": "makeStyles-listItem-2 makeStyles-disabledListItem-3",
      }
    }
    divider={true}
    id="test-list-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <WithStyles(ForwardRef(Tooltip))
          title="You are not able to edit this row"
        >
          <LockIcon />
        </WithStyles(ForwardRef(Tooltip))>
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "contributorLinked": "makeStyles-contributorLinked-11",
          "disabledListItem": "makeStyles-disabledListItem-3",
          "hideIcon": "makeStyles-hideIcon-7",
          "highlighted": "makeStyles-highlighted-4",
          "identifierName": "makeStyles-identifierName-9",
          "identifierSubtitle": "makeStyles-identifierSubtitle-10",
          "listContainer": "makeStyles-listContainer-1",
          "listItem": "makeStyles-listItem-2",
          "primary": "makeStyles-primary-8",
          "rowSelected": "makeStyles-rowSelected-5",
          "selected": "makeStyles-selected-6",
        }
      }
      contributor={
        Object {
          "disabled": true,
        }
      }
      contributorRowId="test-list-row-0"
      index={0}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            data-testid="test-list-row-0-delete"
            disabled={false}
            id="test-list-row-delete-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow should render contributor row linked class for admin users 1`] = `
<Fragment>
  <Memo(ConfirmationBox)
    confirmationBoxId="test-list-row-0-delete"
    isOpen={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onClose={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (Test) to assign it to you"
    classes={
      Object {
        "root": "makeStyles-listItem-2 makeStyles-highlighted-4 makeStyles-contributorLinked-11",
      }
    }
    divider={true}
    id="test-list-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <HowToRegIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={true}
      classes={
        Object {
          "contributorLinked": "makeStyles-contributorLinked-11",
          "disabledListItem": "makeStyles-disabledListItem-3",
          "hideIcon": "makeStyles-hideIcon-7",
          "highlighted": "makeStyles-highlighted-4",
          "identifierName": "makeStyles-identifierName-9",
          "identifierSubtitle": "makeStyles-identifierSubtitle-10",
          "listContainer": "makeStyles-listContainer-1",
          "listItem": "makeStyles-listItem-2",
          "primary": "makeStyles-primary-8",
          "rowSelected": "makeStyles-rowSelected-5",
          "selected": "makeStyles-selected-6",
        }
      }
      contributor={
        Object {
          "affilication": "NotUQ",
          "nameAsPublished": "Test",
          "orgaff": "Test",
          "orgtype": "NGO",
          "uqIdentifier": "123456",
        }
      }
      contributorRowId="test-list-row-0"
      index={0}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Edit this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Edit this record"
            data-testid="test-list-row-0-edit"
            disabled={false}
            id="test-list-row-edit-0"
            onClick={[Function]}
          >
            <EditIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            data-testid="test-list-row-0-delete"
            disabled={false}
            id="test-list-row-delete-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow should render row as required 1`] = `
<Fragment>
  <Memo(ConfirmationBox)
    confirmationBoxId="test-list-row-0-delete"
    isOpen={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onClose={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (Test) to assign it to you"
    classes={
      Object {
        "root": "makeStyles-listItem-2 makeStyles-highlighted-4",
      }
    }
    divider={true}
    id="test-list-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <PersonOutlinedIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "contributorLinked": "makeStyles-contributorLinked-11",
          "disabledListItem": "makeStyles-disabledListItem-3",
          "hideIcon": "makeStyles-hideIcon-7",
          "highlighted": "makeStyles-highlighted-4",
          "identifierName": "makeStyles-identifierName-9",
          "identifierSubtitle": "makeStyles-identifierSubtitle-10",
          "listContainer": "makeStyles-listContainer-1",
          "listItem": "makeStyles-listItem-2",
          "primary": "makeStyles-primary-8",
          "rowSelected": "makeStyles-rowSelected-5",
          "selected": "makeStyles-selected-6",
        }
      }
      contributor={
        Object {
          "affilication": "NotUQ",
          "nameAsPublished": "Test",
          "orgaff": "Test",
          "orgtype": "NGO",
        }
      }
      contributorRowId="test-list-row-0"
      index={0}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            data-testid="test-list-row-0-delete"
            disabled={false}
            id="test-list-row-delete-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow should render with missing aria label if selectHint prop is falsy 1`] = `
<Fragment>
  <Memo(ConfirmationBox)
    confirmationBoxId="test-list-row-0-delete"
    isOpen={false}
    onAction={[Function]}
    onClose={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label=""
    classes={
      Object {
        "root": "makeStyles-listItem-2",
      }
    }
    divider={true}
    id="test-list-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <PersonOutlinedIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "contributorLinked": "makeStyles-contributorLinked-11",
          "disabledListItem": "makeStyles-disabledListItem-3",
          "hideIcon": "makeStyles-hideIcon-7",
          "highlighted": "makeStyles-highlighted-4",
          "identifierName": "makeStyles-identifierName-9",
          "identifierSubtitle": "makeStyles-identifierSubtitle-10",
          "listContainer": "makeStyles-listContainer-1",
          "listItem": "makeStyles-listItem-2",
          "primary": "makeStyles-primary-8",
          "rowSelected": "makeStyles-rowSelected-5",
          "selected": "makeStyles-selected-6",
        }
      }
      contributor={
        Object {
          "nameAsPublished": "A. Smith",
        }
      }
      contributorRowId="test-list-row-0"
      index={0}
      selectedClass=""
      showRoleInput={false}
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            data-testid="test-list-row-0-delete"
            disabled={false}
            id="test-list-row-delete-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;
